force-app/main/default/objects/IPIA_Type__c/IPIA_Type__c.object-meta.xml
<CustomObject>
    <label>IPIA Type</label>
    <nameField>
        <label>IPIA Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPIA Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>