force-app/main/default/objects/IPIA_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Form Description</label>
    <type>TextArea</type>
</CustomField>