force-app/main/default/objects/IPIA_Type__c/fields/DocusignTemplate__c.field-meta.xml
<CustomField>
    <fullName>DocusignTemplate__c</fullName>
    <label>DocuSign Template ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>