force-app/main/default/objects/IPIA_Type__c/fields/Exemption__c.field-meta.xml
<CustomField>
    <fullName>Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exemption</label>
    <type>Checkbox</type>
</CustomField>