force-app/main/default/objects/IPIA_Type__c/validationRules/Excemption_Field_Not_Updatable.validationRule-meta.xml
<ValidationRule>
    <fullName>Excemption_Field_Not_Updatable</fullName>
    <active>true</active>
    <description>The Exemption field may only be set on creation.</description>
    <errorConditionFormula>ISCHANGED(Exemption__c)</errorConditionFormula>
    <errorDisplayField>Exemption__c</errorDisplayField>
    <errorMessage>The Exemption field may not be updated.</errorMessage>
</ValidationRule>