force-app/main/default/objects/IPIA_Type__c/validationRules/Name_Field_Not_Updatable.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Field_Not_Updatable</fullName>
    <active>false</active>
    <description>Name_Field_Not_Updatable</description>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Name field may only be set on creation.</errorMessage>
</ValidationRule>