force-app/main/default/objects/IPIA_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Exemption__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All IPIA Types</label>
</ListView>